--- a/community.css
+++ b/community.css
@@ -5,15 +5,24 @@ body {
     background-color: #fffaf2;
   }
   
-  header {
-    background-color: #ffaf53;
-    padding: 20px;
-    text-align: center;
-  }
-  header h1 a {
-    color: white;
-    text-decoration: none;
-  }
+header {
+  background-color: #ffaf53;
+  padding: 20px;
+  text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 28px;
+  line-height: 1.2;
+}
+
+header h1 a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
   
   nav {
     background-color: #b36c37;
