--- a/info.css
+++ b/info.css
@@ -38,7 +38,7 @@ nav a {
 }
 
 /* 개인작성시작 */
-h2 > a {
+h1 > a {
   color: black;
 }
   
@@ -50,6 +50,9 @@ main {
       padding: 30px 20px;
     }
 div.dog {
-  padding: 30px white;
+  width: auto; height: auto;
+  background-color: white;
+  
+  padding: 30px;
   border: 5px  #b36c37;
 }
