--- a/info.css
+++ b/info.css
@@ -53,6 +53,7 @@ div.dog {
   width: auto; height: auto;
   background-color: white;
   
-  padding: 30px;
-  border: 5px  #b36c37;
+  padding: 20px;
+  border: 20px  #b36c37;
+  margin: 40px;
 }
