--- a/info.css
+++ b/info.css
@@ -54,6 +54,8 @@ div.dog {
   background-color: white;
   
   padding: 20px;
-  border: 20px  #b36c37;
-  margin: 40px;
+  border: 20px  solid black;
+  margin: 20px;
+
+  border-radius: 20px;
 }
