--- a/info.css
+++ b/info.css
@@ -51,15 +51,12 @@ main {
     }
 div.dog {
   width: auto; height: auto;
-  background-color: blue;
+  line-height: auto;
+  background-color: baby blue;
   
   padding: 20px;
   border: 5px #b36c37;
   margin: 10px 30px 50px 30px;
 
   border-radius: 40px;
-}
-
-div.dog {
-  line-height: auto;
 }
