--- a/info.css
+++ b/info.css
@@ -52,13 +52,14 @@ main {
 
 div.dog {
   width: auto; height: auto;
-  background-color: baby blue;
+  background-color:  lemonchiffon;
   
-  padding: 20px;
-  border: 5px #b36c37;
-  margin: 0px 20px 50px 20px;
+  padding: 30px;
+  border: 2px solid #ffaf53;
+  border-style: dashed;
+  margin: 0px 30px 70px 30px;
 
-  line-height: auto;
+  line-height: 2.0;
 
   border-radius: 40px;
 }
