--- a/share.css
+++ b/share.css
@@ -93,16 +93,25 @@ nav a {
 .item-card {
   background-color: #ffe0bd;
   border-radius: 10px;
-  padding: 20px;
+  padding: 16px;
   text-align: center;
   aspect-ratio: 1 / 1;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: relative;
-  overflow: hidden; /* 이미지 넘칠 때 자르기 */
+  overflow: hidden;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+.item-card img {
+  width: 100%;
+  height: auto;
+  max-height: 70%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 
 .item-card img {
   width: 80%;
