--- a/share.css
+++ b/share.css
@@ -107,11 +107,13 @@ nav a {
 
 .item-card img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  max-height: 70%;
   object-fit: cover;
   border-radius: 8px;
-  flex-grow: 1;
+  margin-bottom: 10px;
 }
+
 
 
 .item-card h3 {
