--- a/info.css
+++ b/info.css
@@ -103,3 +103,9 @@ ol .float:first-child {
 ol {
   display: flex;
 }
+
+.from p {
+  display: inline-block;
+  margin: 0 0 0 10px;
+  font-size: 0.8em;
+}
