--- a/style.css
+++ b/style.css
@@ -266,12 +266,14 @@ div.contents b {
     margin: 0;
 }
 .posting {
-  text-decoration: none;
-  color: black;
   background-color: #fffaf0;
   border-radius: 10px;
   padding: 20px;
   margin: 10px 0;
+}
+.posting a {
+    text-decoration: none;
+    color: black;
 }
 
 /* 유기견/묘 입양구조홍보 */
