--- a/share.css
+++ b/share.css
@@ -205,6 +205,14 @@ nav a {
   transform: scale(1.2);
 }
 
+.modal-content {
+  position: relative;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+
 
 .modal {
   position: fixed;
@@ -212,6 +220,7 @@ nav a {
   width: 100%; height: 100%;
   background: rgba(0,0,0,0.4);
   display: flex; justify-content: center; align-items: center;
+  z-index: 1000;
 }
 .modal.hidden { display: none; }
 .modal-content {
